User redactor added to UI

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
     <th:block th:insert="~{fragments/navigation::navigation}"/>
 
     <div class="text-center mt-5 text-secondary">
-        <h5>&copy;Soloveyko</h5>
+        <h5 th:text="'&copy;Soloveyko'"></h5>
     </div>
 
 </footer>
