--- a/src/main/resources/templates/fragments/user-bar.html
+++ b/src/main/resources/templates/fragments/user-bar.html
@@ -9,17 +9,17 @@
                 <a class="nav-link" th:href="@{'/profile'}" th:text="${#authentication.name}"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{'/logout'}">Logout</a>
+                <a class="nav-link" th:href="@{'/logout'}" th:text="Logout"></a>
             </li>
         </ul>
     </th:block>
     <th:block sec:authorize="isAnonymous()">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" th:href="@{'/login'}">Log In</a>
+                <a class="nav-link" th:href="@{'/login'}" th:text="'Log In'"></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{'/registration'}">Sign In</a>
+                <a class="nav-link" th:href="@{'/registration'}" th:text="'Sign In'"></a>
             </li>
         </ul>
     </th:block>
