--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
 <div class="container-fluid mt-5 pt-4 p-5" style="min-height: 100vh;">
     <div class="content" layout:fragment="content">
         <div class="post-container">
-            <button class="btn btn-primary ms-5 shadow mb-5 rounded"
+            <button class="btn btn-primary ms-5 shadow rounded"
                     th:attr="onclick='window.location.href=\'/new-post\''">
                 New post
             </button>
@@ -47,23 +47,25 @@
                              th:if="${post.avatarPath != null}"
                              th:src="@{'/uploads/avatar/' + ${post.avatarPath}}"
                              alt="Avatar"
-                             style="height: 50px; width: 50px;"/>
+                             style="height: 40px; width: 40px;"/>
 
                         <h4 class="align-self-center ms-3" th:text="${post.username}"/>
 
                     </a>
                 </div>
+                <div class="card-header">
+                    <h4 class="card-title ms-3" th:text="${post.title}"/>
+                </div>
                 <div class="card-body">
-                    <h4 class="card-title" th:text="${post.title}"/>
                     <p class="card-text" th:text="${post.content}"/>
                 </div>
                 <div class="card-footer text-body-secondary" style="height: 45px;">
                     <div class="row">
                         <div class="post-actions col" th:if="${post.username.equals(#authentication.name)}">
                             <a class="link-underline link-underline-opacity-0 link-secondary"
-                               th:href="@{/post/{id}/remove(id=${post.id})}">Remove</a>
+                               th:href="@{/post/{id}/remove(id=${post.id})}" th:text="'Remove'"></a>
                             <a class="link-underline link-underline-opacity-0 link-secondary ms-2"
-                               th:href="@{/post/{id}/edit(id=${post.id})}">Edit</a>
+                               th:href="@{/post/{id}/edit(id=${post.id})}" th:text="'Edit'"></a>
                         </div>
 
                         <div class="text-end col">
