--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div class="post-container" layout:fragment="content">
+
     <button class="btn btn-primary ms-5 shadow rounded"
             th:attr="onclick='window.location.href=\'/new-post\''"
             th:fragment="newPostBtn">
@@ -32,7 +33,6 @@
 
                 <h4 class="align-self-center ms-3"
                     th:text="*{username}"></h4>
-
             </a>
         </div>
 
@@ -51,34 +51,92 @@
                     <a class="link-underline link-underline-opacity-0 link-secondary ms-2"
                        th:href="@{/post/{id}/edit(id=*{id})}" th:text="'Edit'"></a>
                 </div>
-
                 <div class="text-end col">
                     <p th:text="${#dates.format(post.updated, 'HH:mm, dd MMMM yyyy')}"></p>
                 </div>
             </div>
         </div>
-
     </div>
+
     <div class="border-top">
-        <form th:action="@{/post/{id}(id=${post.id})}" class="px-5 pt-5" method="post" th:object="${comment}">
+        <form th:action="@{/post/{id}(id=${post.id})}"
+              class="px-5 pt-5" method="post"
+              th:object="${comment}">
+
             <div class="p-2 shadow mb-5 bg-body-tertiary rounded border">
                 <textarea id="content" name="content" class="form-control overflow-hidden"
                           placeholder="New comment"></textarea>
                 <input type="hidden" name="username" th:value="${#authentication.name}">
                 <input type="hidden" name="postId" th:value="${post.id}">
+                <input type="hidden" name="parentCommentId" th:value="0">
 
                 <button type="submit" class="btn btn-primary mt-2 ms-3">Comment</button>
             </div>
         </form>
     </div>
-    <div class="px-5" th:if="${!post.comments.isEmpty()}">
-        <th:block th:each="comment : ${post.comments}" th:object="${comment}">
-            <div class="px-2 shadow mb-3 bg-body-tertiary rounded border">
-                <h4 class="border-bottom py-2 ps-4" th:text="*{username}"></h4>
-                <p class="ms-2 card-text" th:text="*{content}"></p>
-                <p class="border-top text-end pt-2 pe-3 text-body-secondary"
-                   th:text="${#dates.format(comment.created, 'HH:mm, dd MMMM yyyy')}"></p>
-            </div>
+
+    <div class="px-5" th:if="${post.comments != null && !post.comments.isEmpty()}">
+
+        <th:block th:each="comment : ${post.comments}">
+            <th:block th:if="${comment.parentCommentId == 0}">
+                <div class="ms-5 mt-3" th:object="${comment}"
+                     th:fragment="comment">
+
+                    <div class="card shadow bg-body-tertiary rounded">
+
+                        <div class="card-header bg-dark">
+                            <a class="user-name d-flex bg-dark rounded
+                            link-light link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover"
+                               th:href="@{'/profile/' + *{username}}">
+
+                                <img class="img-thumbnail rounded-circle border-dark"
+                                     th:if="${post.avatarPath != null}"
+                                     th:src="@{'/uploads/avatar/' + ${post.avatarPath}}"
+                                     alt="Avatar"
+                                     style="height: 40px; width: 40px;"/>
+
+                                <h4 class="align-self-center ms-3"
+                                    th:text="*{username}"></h4>
+                            </a>
+                        </div>
+
+                        <div class=" card-body">
+                            <p class="card-text p-2" th:text="*{content}"></p>
+                        </div>
+
+                        <div class="card-footer text-body-secondary" style="height: 40px">
+                            <div class="row">
+                                <a class="link-underline link-underline-opacity-0 link-secondary col"
+                                   data-toggle="collapse" role="button"
+                                   aria-expanded="false" th:aria-controls="'commentForm-' + ${comment.id}"
+                                   th:href="@{'#commentForm-' + ${comment.id}}" th:text="reply"></a>
+                                <p class="text-end col"
+                                   th:text="${#dates.format(comment.created, 'HH:mm, dd MMMM yyyy')}"></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="collapse" th:id="'commentForm-' + ${comment.id}">
+                        <form th:action="@{/post/{id}(id=${post.id})}"
+                              method="post">
+                            <div class="p-2 shadow mb-5 bg-body-tertiary rounded border">
+                            <textarea id="content" name="content" class="form-control overflow-hidden"
+                                      placeholder="New comment"></textarea>
+                                <input type="hidden" name="username" th:value="${#authentication.name}">
+                                <input type="hidden" name="postId" th:value="${post.id}">
+                                <input type="hidden" name="parentCommentId" th:value="${comment.id}">
+
+                                <button type="submit" class="btn btn-primary mt-2 ms-3">Comment</button>
+                            </div>
+                        </form>
+                    </div>
+
+                    <th:block th:if="*{!comments.isEmpty()}">
+                        <th:block th:insert="~{post::comment}" th:each="comment : *{comments}"></th:block>
+                    </th:block>
+
+                </div>
+            </th:block>
         </th:block>
     </div>
 </div>
