--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -10,135 +10,11 @@
 <body>
 <div class="post-container" layout:fragment="content">
 
-    <button class="btn btn-primary ms-5 shadow rounded"
-            th:attr="onclick='window.location.href=\'/new-post\''"
-            th:fragment="newPostBtn">
-        New post
-    </button>
+    <th:block th:insert="~{fragments/post::newPostBtn}"></th:block>
 
-    <div class="card mt-4 shadow mb-5 bg-body-tertiary rounded"
-         th:fragment="post" th:object="${post}">
+    <th:block th:insert="~{fragments/post::post}"></th:block>
 
-        <div class="card-header bg-dark">
-
-            <a class="user-name d-flex ms-4 mt-1
-                      link-light link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover"
-               th:href="@{'/profile/' + *{username}}">
-
-                <img class="img-thumbnail rounded-circle border-dark"
-                     th:if="*{avatarPath != null}"
-                     th:src="@{'/uploads/avatar/' + *{avatarPath}}"
-                     alt="Avatar"
-                     style="height: 40px; width: 40px;"/>
-
-                <h4 class="align-self-center ms-3"
-                    th:text="*{username}"></h4>
-            </a>
-        </div>
-
-        <div class="card-body">
-            <a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover "
-               th:href="@{/post/{id}(id=*{id})}">
-                <h4 class="card-title ms-3 pb-2 border-bottom" th:text="*{title}"></h4>
-            </a>
-            <p class="card-text p-2" th:text="*{content}"></p>
-        </div>
-        <div class="card-footer text-body-secondary" style="height: 45px;">
-            <div class="row">
-                <div class="post-actions col" th:if="*{username.equals(#authentication.name)}">
-                    <a class="link-underline link-underline-opacity-0 link-secondary"
-                       th:href="@{/post/{id}/remove(id=*{id})}" th:text="'Remove'"></a>
-                    <a class="link-underline link-underline-opacity-0 link-secondary ms-2"
-                       th:href="@{/post/{id}/edit(id=*{id})}" th:text="'Edit'"></a>
-                </div>
-                <div class="text-end col">
-                    <p th:text="${#dates.format(post.updated, 'HH:mm, dd MMMM yyyy')}"></p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="border-top">
-        <form th:action="@{/post/{id}(id=${post.id})}"
-              class="px-5 pt-5" method="post"
-              th:object="${comment}">
-
-            <div class="p-2 shadow mb-5 bg-body-tertiary rounded border">
-                <textarea id="content" name="content" class="form-control overflow-hidden"
-                          placeholder="New comment"></textarea>
-                <input type="hidden" name="username" th:value="${#authentication.name}">
-                <input type="hidden" name="postId" th:value="${post.id}">
-                <input type="hidden" name="parentCommentId" th:value="0">
-
-                <button type="submit" class="btn btn-primary mt-2 ms-3">Comment</button>
-            </div>
-        </form>
-    </div>
-
-    <div class="px-5" th:if="${post.comments != null && !post.comments.isEmpty()}">
-
-        <th:block th:each="comment : ${post.comments}">
-            <th:block th:if="${comment.parentCommentId == 0}">
-                <div class="ms-5 mt-3" th:object="${comment}"
-                     th:fragment="comment">
-
-                    <div class="card shadow bg-body-tertiary rounded">
-
-                        <div class="card-header bg-dark">
-                            <a class="user-name d-flex bg-dark rounded
-                            link-light link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover"
-                               th:href="@{'/profile/' + *{username}}">
-
-                                <img class="img-thumbnail rounded-circle border-dark"
-                                     th:if="${post.avatarPath != null}"
-                                     th:src="@{'/uploads/avatar/' + ${post.avatarPath}}"
-                                     alt="Avatar"
-                                     style="height: 40px; width: 40px;"/>
-
-                                <h4 class="align-self-center ms-3"
-                                    th:text="*{username}"></h4>
-                            </a>
-                        </div>
-
-                        <div class=" card-body">
-                            <p class="card-text p-2" th:text="*{content}"></p>
-                        </div>
-
-                        <div class="card-footer text-body-secondary" style="height: 40px">
-                            <div class="row">
-                                <a class="link-underline link-underline-opacity-0 link-secondary col"
-                                   data-toggle="collapse" role="button"
-                                   aria-expanded="false" th:aria-controls="'commentForm-' + ${comment.id}"
-                                   th:href="@{'#commentForm-' + ${comment.id}}" th:text="reply"></a>
-                                <p class="text-end col"
-                                   th:text="${#dates.format(comment.created, 'HH:mm, dd MMMM yyyy')}"></p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="collapse" th:id="'commentForm-' + ${comment.id}">
-                        <form th:action="@{/post/{id}(id=${post.id})}"
-                              method="post">
-                            <div class="p-2 shadow mb-5 bg-body-tertiary rounded border">
-                            <textarea id="content" name="content" class="form-control overflow-hidden"
-                                      placeholder="New comment"></textarea>
-                                <input type="hidden" name="username" th:value="${#authentication.name}">
-                                <input type="hidden" name="postId" th:value="${post.id}">
-                                <input type="hidden" name="parentCommentId" th:value="${comment.id}">
-
-                                <button type="submit" class="btn btn-primary mt-2 ms-3">Comment</button>
-                            </div>
-                        </form>
-                    </div>
-
-                    <th:block th:if="*{!comments.isEmpty()}">
-                        <th:block th:insert="~{post::comment}" th:each="comment : *{comments}"></th:block>
-                    </th:block>
-
-                </div>
-            </th:block>
-        </th:block>
-    </div>
+    <th:block th:insert="~{fragments/comments::comments}"></th:block>
 </div>
 </body>
 </html>
