--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -26,7 +26,7 @@
         }
     </script>
     <div class="card shadow mb-5 bg-body-tertiary rounded">
-        <h3 class="card-header" th:text="${profile.username}"/>
+        <h3 class="card-header bg-dark text-light" th:text="${profile.username}"/>
 
         <form th:action="@{'/profile'}"
               method="post"
